--- a/netbeansProyects/[AD]_DAM_Acceso_Datos/[AD_2eva]/AD03_DB/pom.xml
+++ b/netbeansProyects/[AD]_DAM_Acceso_Datos/[AD_2eva]/AD03_DB/pom.xml
@@ -5,9 +5,33 @@
     <artifactId>AD03_DB</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <properties>
+        <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>https://opensource.org/licenses/MIT</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Bieito Sousa Barreiro</name>
+            <email>bieito.developer@gmail.com</email>
+        </developer>
+    </developers>
+    
+    <dependencies>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>${version.sqlite}</version>
+        </dependency>
+   </dependencies>
+    
+    
+   <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <version.sqlite>3.30.1</version.sqlite>
     </properties>
 </project>
