--- a/netbeansProyects/[AD]_DAM_Acceso_Datos/[AD_2eva]/AD03_DB/pom.xml
+++ b/netbeansProyects/[AD]_DAM_Acceso_Datos/[AD_2eva]/AD03_DB/pom.xml
@@ -25,8 +25,13 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>${version.sqlite}</version>
         </dependency>
-   </dependencies>
-    
+   
+    <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+    </dependencies>
     
    <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -34,4 +39,6 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <version.sqlite>3.30.1</version.sqlite>
     </properties>
+  
+    
 </project>
